removed broken unneeded links

--- a/_index.ipynb
+++ b/_index.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "rX8mhOLljYeM"
-      },
       "source": [
         "##### Copyright 2018 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "rX8mhOLljYeM"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "BZSlp3DAjdYf"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,113 +24,93 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "BZSlp3DAjdYf"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "3wF5wszaj97Y"
-      },
       "source": [
         "# Get Started with TensorFlow 1.x"
-      ]
+      ],
+      "metadata": {
+        "id": "3wF5wszaj97Y"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "DUNzJc4jTj6G"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/_index.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/_index.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "DUNzJc4jTj6G"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "DUNzJc4jTj6G"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "but will run in TF1 as well. "
+      ],
       "metadata": {
-        "id": "hiH7AC-NTniF"
-      },
-      "source": [
-        "This is a [Google Colaboratory](https://colab.research.google.com/notebooks/welcome.ipynb) notebook file. Python programs are run directly in the browser—a great way to learn and use TensorFlow. To run the Colab notebook:\n",
-        "\n",
-        "1. Connect to a Python runtime: At the top-right of the menu bar, select *CONNECT*.\n",
-        "2. Run all the notebook code cells: Select *Runtime* > *Run all*.\n",
-        "\n",
-        "For more examples and guides (including details for this program), see [Get Started with TensorFlow](https://www.tensorflow.org/get_started/).\n",
-        "\n",
-        "Let's get started, import the TensorFlow library into your program:"
-      ]
+        "id": "DUNzJc4jTj6G"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "0trJmd6DjqBZ"
-      },
-      "outputs": [],
       "source": [
         "import tensorflow.compat.v1 as tf"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "0trJmd6DjqBZ"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7NAbSZiaoJ4z"
-      },
       "source": [
         "Load and prepare the [MNIST](http://yann.lecun.com/exdb/mnist/) dataset. Convert the samples from integers to floating-point numbers:"
-      ]
+      ],
+      "metadata": {
+        "id": "7NAbSZiaoJ4z"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "7FP5258xjs-v"
-      },
-      "outputs": [],
       "source": [
         "mnist = tf.keras.datasets.mnist\n",
         "\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "7FP5258xjs-v"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BPZ68wASog_I"
-      },
       "source": [
         "Build the `tf.keras` model by stacking layers. Select an optimizer and loss function used for training:"
-      ]
+      ],
+      "metadata": {
+        "id": "BPZ68wASog_I"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "h3IKyzTCDNGo"
-      },
-      "outputs": [],
       "source": [
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
@@ -147,38 +122,42 @@
         "model.compile(optimizer='adam',\n",
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "h3IKyzTCDNGo"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ix4mEL65on-w"
-      },
       "source": [
         "Train and evaluate model:"
-      ]
+      ],
+      "metadata": {
+        "id": "ix4mEL65on-w"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "F7dTAzgHDUh7"
-      },
-      "outputs": [],
       "source": [
         "model.fit(x_train, y_train, epochs=5)\n",
         "\n",
         "model.evaluate(x_test,  y_test, verbose=2)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "F7dTAzgHDUh7"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "T4JfEh7kvx6m"
-      },
       "source": [
         "You’ve now trained an image classifier with ~98% accuracy on this dataset. See [Get Started with TensorFlow](https://www.tensorflow.org/get_started/) to learn more."
-      ]
+      ],
+      "metadata": {
+        "id": "T4JfEh7kvx6m"
+      }
     }
   ],
   "metadata": {
@@ -193,5 +172,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
