--- a/distribute/tpu_custom_training.ipynb
+++ b/distribute/tpu_custom_training.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "MhoQ0WE77laV"
-      },
       "source": [
         "##### Copyright 2019 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "MhoQ0WE77laV"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "_ckMIh7O7s6D"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,65 +24,61 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "_ckMIh7O7s6D"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "jYysdyb-CaWM"
-      },
       "source": [
         "# Custom training with TPUs"
-      ]
+      ],
+      "metadata": {
+        "id": "jYysdyb-CaWM"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "S5Uhzt6vVIB2"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/distribute/tpu_custom_training.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/distribute/tpu_custom_training.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "S5Uhzt6vVIB2"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "S5Uhzt6vVIB2"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well."
+      ],
+      "metadata": {
+        "id": "S5Uhzt6vVIB2"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "FbVhjPpzn6BM"
-      },
       "source": [
         "This tutorial will take you through using [tf.distribute.experimental.TPUStrategy](https://www.tensorflow.org/api_docs/python/tf/distribute/experimental/TPUStrategy). This is a new strategy, a part of `tf.distribute.Strategy`, that allows users to easily switch their model to using TPUs. As part of this tutorial, you will create a Keras model and take it through a custom training loop (instead of calling `fit` method).\n",
         "\n",
         "You should be able to understand what is a strategy and why it’s necessary in Tensorflow. This will help you switch between CPU, GPUs, and other device configurations more easily once you understand the strategy framework. To make the introduction easier, you will also make a Keras model that produces a simple convolutional neural network. A Keras model usually is trained in one line of code (by calling its `fit` method), but because some users require additional customization, we showcase how to use custom training loops. Distribution Strategy was originally written by DeepMind -- you can [read the story here](https://deepmind.com/blog/tf-replicator-distributed-machine-learning/)."
-      ]
+      ],
+      "metadata": {
+        "id": "FbVhjPpzn6BM"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "dzLKpmZICaWN"
-      },
-      "outputs": [],
       "source": [
         "# Import TensorFlow\n",
         "import tensorflow.compat.v1 as tf\n",
@@ -97,47 +88,43 @@
         "import numpy as np\n",
         "import os\n",
         "\n",
-        "assert os.environ['COLAB_TPU_ADDR'], 'Make sure to select TPU from Edit > Notebook settings > Hardware accelerator'\n",
-        "\n",
         "assert float('.'.join(tf.__version__.split('.')[:2])) >= 1.14, 'Make sure that Tensorflow version is at least 1.14'"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "dzLKpmZICaWN"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "source": [],
+      "outputs": [],
       "metadata": {
         "id": "7nSiTgSt-RrV"
-      },
-      "outputs": [],
-      "source": [
-        "TPU_WORKER = 'grpc://' + os.environ['COLAB_TPU_ADDR']"
-      ]
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "MM6W__qraV55"
-      },
       "source": [
         "## Create model"
-      ]
+      ],
+      "metadata": {
+        "id": "MM6W__qraV55"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "58ff7ew6MK9d"
-      },
       "source": [
         "Since you will be working with the [MNIST data](https://en.wikipedia.org/wiki/MNIST_database), which is a collection of 70,000 greyscale images representing digits, you want to be using a convolutional neural network to help us with the labeled image data. You will use the Keras API."
-      ]
+      ],
+      "metadata": {
+        "id": "58ff7ew6MK9d"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "7MqDQO0KCaWS"
-      },
-      "outputs": [],
       "source": [
         "def create_model(input_shape):\n",
         "  \"\"\"Creates a simple convolutional neural network model using the Keras API\"\"\"\n",
@@ -149,33 +136,33 @@
         "      tf.keras.layers.Dropout(0.2),\n",
         "      tf.keras.layers.Dense(10, activation=tf.nn.softmax),\n",
         "  ])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "7MqDQO0KCaWS"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "4AXoHhrsbdF3"
-      },
       "source": [
         "## Loss and gradient"
-      ]
+      ],
+      "metadata": {
+        "id": "4AXoHhrsbdF3"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5mVuLZhbem8d"
-      },
       "source": [
         "Since you are preparing to use a custom training loop, you need to explicitly write down the loss and gradient functions."
-      ]
+      ],
+      "metadata": {
+        "id": "5mVuLZhbem8d"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "F2VeZUWUj5S4"
-      },
-      "outputs": [],
       "source": [
         "def loss(model, x, y):\n",
         "  \"\"\"Calculates the loss given an example (x, y)\"\"\"\n",
@@ -186,33 +173,33 @@
         "  \"\"\"Calculates the loss and the gradients given an example (x, y)\"\"\"\n",
         "  logits, loss_value = loss(model, x, y)\n",
         "  return logits, loss_value, tf.gradients(loss_value, model.trainable_variables)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "F2VeZUWUj5S4"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "k53F5I_IiGyI"
-      },
       "source": [
         "## Main function"
-      ]
+      ],
+      "metadata": {
+        "id": "k53F5I_IiGyI"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "0Qb6nDgxiN_n"
-      },
       "source": [
         "Previous sections highlighted the most important parts of the tutorial. The following code block gives a complete and runnable example of using TPUStrategy with a Keras model and a custom training loop."
-      ]
+      ],
+      "metadata": {
+        "id": "0Qb6nDgxiN_n"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "jwJtsCQhHK-E"
-      },
-      "outputs": [],
       "source": [
         "tf.keras.backend.clear_session()\n",
         "\n",
@@ -243,28 +230,28 @@
         "\n",
         "train_steps_per_epoch = len(x_train) // BATCH_SIZE\n",
         "test_steps_per_epoch = len(x_test) // BATCH_SIZE"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "jwJtsCQhHK-E"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "GPrDC8IfOgCT"
-      },
       "source": [
         "## Start by creating objects within the strategy's scope\n",
         "\n",
         "Model creation, optimizer creation, etc. must be written in the context of strategy.scope() in order to use TPUStrategy. \n",
         "\n",
         "Also initialize metrics for the train and test sets. More information: `keras.metrics.Mean` and `keras.metrics.SparseCategoricalAccuracy`"
-      ]
+      ],
+      "metadata": {
+        "id": "GPrDC8IfOgCT"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "s_suB7CZNw5W"
-      },
-      "outputs": [],
       "source": [
         "with strategy.scope():\n",
         "  model = create_model(input_shape)\n",
@@ -277,24 +264,24 @@
         "  test_loss = tf.keras.metrics.Mean('test_loss', dtype=tf.float32)\n",
         "  test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(\n",
         "      'test_accuracy', dtype=tf.float32)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "s_suB7CZNw5W"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "d3iLK5ZtO1_R"
-      },
       "source": [
         "## Define custom train and test steps"
-      ]
+      ],
+      "metadata": {
+        "id": "d3iLK5ZtO1_R"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "XAF6xfU0N5ID"
-      },
-      "outputs": [],
       "source": [
         "with strategy.scope():\n",
         "  def train_step(inputs):\n",
@@ -329,25 +316,25 @@
         "\n",
         "    with tf.control_dependencies([update_loss, update_accuracy]):\n",
         "      return tf.identity(loss_value)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "XAF6xfU0N5ID"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "AhrK1-yEO7Nf"
-      },
       "source": [
         "## Do the training\n",
         "In order to make the reading a little bit easier, the full training loop calls two helper functions, `run_train()` and `run_test()`."
-      ]
+      ],
+      "metadata": {
+        "id": "AhrK1-yEO7Nf"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "or5osuheouVU"
-      },
-      "outputs": [],
       "source": [
         "def run_train():\n",
         "  # Train\n",
@@ -376,15 +363,15 @@
         "      session.run(test_accuracy_result) * 100))\n",
         "  test_loss.reset_states()\n",
         "  test_accuracy.reset_states()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "or5osuheouVU"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "u5LvzAwjN95j"
-      },
-      "outputs": [],
       "source": [
         "with strategy.scope():\n",
         "  training_loss_result = training_loss.result()\n",
@@ -428,7 +415,11 @@
         "      run_train()\n",
         "\n",
         "      run_test()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "u5LvzAwjN95j"
+      }
     }
   ],
   "metadata": {
@@ -444,5 +435,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
