--- a/estimators/boosted_trees.ipynb
+++ b/estimators/boosted_trees.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7765UFHoyGx6"
-      },
       "source": [
         "##### Copyright 2019 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "7765UFHoyGx6"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "KVtTDrUNyL7x"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,75 +24,71 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "KVtTDrUNyL7x"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "xPYxZMrWyA0N"
-      },
       "source": [
         "#How to train Boosted Trees models in TensorFlow"
-      ]
+      ],
+      "metadata": {
+        "id": "xPYxZMrWyA0N"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "p_vOREjRx-Y0"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/estimators/boosted_trees.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/estimators/boosted_trees.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\">View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "p_vOREjRx-Y0"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "p_vOREjRx-Y0"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well. "
+      ],
+      "metadata": {
+        "id": "p_vOREjRx-Y0"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "dW3r7qVxzqN5"
-      },
       "source": [
         "This tutorial is an end-to-end walkthrough of training a Gradient Boosting  model using decision trees with the `tf.estimator` API. Boosted Trees models are among the most popular and effective machine learning approaches for both regression and classification. It is an ensemble technique that combines the predictions from several (think 10s, 100s or even 1000s) tree models.\n",
         "\n",
         "Boosted Trees models are popular with many machine learning practioners as they can achieve impressive performance with minimal hyperparameter tuning."
-      ]
+      ],
+      "metadata": {
+        "id": "dW3r7qVxzqN5"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eylrTPAN3rJV"
-      },
       "source": [
         "## Load the titanic dataset\n",
         "You will be using the titanic dataset, where the (rather morbid) goal is to predict passenger survival, given characteristics such as gender, age, class, etc."
-      ]
+      ],
+      "metadata": {
+        "id": "eylrTPAN3rJV"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "KuhAiPfZ3rJW"
-      },
-      "outputs": [],
       "source": [
         "from matplotlib import pyplot as plt\n",
         "\n",
@@ -113,13 +104,14 @@
         "dfeval = pd.read_csv('https://storage.googleapis.com/tfbt/titanic_eval.csv')\n",
         "y_train = dftrain.pop('survived')\n",
         "y_eval = dfeval.pop('survived')"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "KuhAiPfZ3rJW"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "3ioodHdVJVdA"
-      },
       "source": [
         "The dataset consists of a training set and an evaluation set:\n",
         "\n",
@@ -171,172 +163,171 @@
         "    <td>If passenger was alone</td>\n",
         "  </tr>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "3ioodHdVJVdA"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "AoPiWsJALr-k"
-      },
       "source": [
         "## Explore the data"
-      ]
+      ],
+      "metadata": {
+        "id": "AoPiWsJALr-k"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "slcat1yzmzw5"
-      },
       "source": [
         "Let's first preview some of the data and create summary statistics on the training set."
-      ]
+      ],
+      "metadata": {
+        "id": "slcat1yzmzw5"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "15PLelXBlxEW"
-      },
-      "outputs": [],
       "source": [
         "dftrain.head()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "15PLelXBlxEW"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "j2hiM4ETmqP0"
-      },
-      "outputs": [],
       "source": [
         "dftrain.describe()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "j2hiM4ETmqP0"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-IR0e8V-LyJ4"
-      },
       "source": [
         "There are 627 and 264 examples in the training and evaluation sets, respectively."
-      ]
+      ],
+      "metadata": {
+        "id": "-IR0e8V-LyJ4"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "_1NwYqGwDjFf"
-      },
-      "outputs": [],
       "source": [
         "dftrain.shape[0], dfeval.shape[0]"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "_1NwYqGwDjFf"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "28UFJ4KSMK3V"
-      },
       "source": [
         "The majority of passengers are in their 20's and 30's."
-      ]
+      ],
+      "metadata": {
+        "id": "28UFJ4KSMK3V"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "CaVDmZtuDfux"
-      },
-      "outputs": [],
       "source": [
         "dftrain.age.hist(bins=20)\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "CaVDmZtuDfux"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "1pifWiCoMbR5"
-      },
       "source": [
         "There are approximately twice as male passengers as female passengers aboard."
-      ]
+      ],
+      "metadata": {
+        "id": "1pifWiCoMbR5"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "-WazAq30MO5J"
-      },
-      "outputs": [],
       "source": [
         "dftrain.sex.value_counts().plot(kind='barh')\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "-WazAq30MO5J"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7_XkxrpmmVU_"
-      },
       "source": [
         "The majority of passengers were in the \"third\" class."
-      ]
+      ],
+      "metadata": {
+        "id": "7_XkxrpmmVU_"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "zZ3PvVy4l4gI"
-      },
-      "outputs": [],
       "source": [
         "(dftrain['class']\n",
         "  .value_counts()\n",
         "  .plot(kind='barh'))\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "zZ3PvVy4l4gI"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "HM5SlwlxmZMT"
-      },
       "source": [
         "Most passengers embarked from Southampton."
-      ]
+      ],
+      "metadata": {
+        "id": "HM5SlwlxmZMT"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "RVTSrdr4mZaC"
-      },
-      "outputs": [],
       "source": [
         "(dftrain['embark_town']\n",
         "  .value_counts()\n",
         "  .plot(kind='barh'))\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "RVTSrdr4mZaC"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "aTn1niLPob3x"
-      },
       "source": [
         "Females have a much higher chance of surviving vs. males. This will clearly be a predictive feature for the model."
-      ]
+      ],
+      "metadata": {
+        "id": "aTn1niLPob3x"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Eh3KW5oYkaNS"
-      },
-      "outputs": [],
       "source": [
         "ax = (pd.concat([dftrain, y_train], axis=1)\\\n",
         "  .groupby('sex')\n",
@@ -345,25 +336,25 @@
         "  .plot(kind='barh'))\n",
         "ax.set_xlabel('% survive')\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "Eh3KW5oYkaNS"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "krkRHuMp3rJn"
-      },
       "source": [
         "## Create feature columns and input functions\n",
         "The Gradient Boosting estimator can utilize both numeric and categorical features. Feature columns work with all TensorFlow estimators and their purpose is to define the features used for modeling. Additionally they provide some feature engineering capabilities like one-hot-encoding, normalization, and bucketization. In this tutorial, the fields in `CATEGORICAL_COLUMNS` are transformed from categorical columns to one-hot-encoded columns ([indicator column](https://www.tensorflow.org/api_docs/python/tf/feature_column/indicator_column)):"
-      ]
+      ],
+      "metadata": {
+        "id": "krkRHuMp3rJn"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "upaNWxcF3rJn"
-      },
-      "outputs": [],
       "source": [
         "fc = tf.feature_column\n",
         "CATEGORICAL_COLUMNS = ['sex', 'n_siblings_spouses', 'parch', 'class', 'deck',\n",
@@ -383,67 +374,67 @@
         "for feature_name in NUMERIC_COLUMNS:\n",
         "  feature_columns.append(fc.numeric_column(feature_name,\n",
         "                                           dtype=tf.float32))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "upaNWxcF3rJn"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "74GNtFpStSAz"
-      },
       "source": [
         "You can view the transformation that a feature column produces. For example, here is the output when using the `indicator_column` on a single example:"
-      ]
+      ],
+      "metadata": {
+        "id": "74GNtFpStSAz"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Eaq79D9FtmF8"
-      },
-      "outputs": [],
       "source": [
         "example = dftrain.head(1)\n",
         "class_fc = one_hot_cat_column('class', ('First', 'Second', 'Third'))\n",
         "print('Feature value: \"{}\"'.format(example['class'].iloc[0]))\n",
         "print('One-hot encoded: ', fc.input_layer(dict(example), [class_fc]).numpy())"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "Eaq79D9FtmF8"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "YbCUn3nCusC3"
-      },
       "source": [
         "Additionally, you can view all of the feature column transformations together:"
-      ]
+      ],
+      "metadata": {
+        "id": "YbCUn3nCusC3"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "omIYcsVws3g0"
-      },
-      "outputs": [],
       "source": [
         "fc.input_layer(dict(example), feature_columns).numpy()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "omIYcsVws3g0"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-UOlROp33rJo"
-      },
       "source": [
         "Next you need to create the input functions. These will specify how data will be read into our model for both training and inference. You will use the `from_tensor_slices` method in the [`tf.data`](https://www.tensorflow.org/api_docs/python/tf/data) API to read in data directly from Pandas. This is suitable for smaller, in-memory datasets. For larger datasets, the tf.data API supports a variety of file formats (including [csv](https://www.tensorflow.org/api_docs/python/tf/data/experimental/make_csv_dataset)) so that you can process datasets that do not fit in memory."
-      ]
+      ],
+      "metadata": {
+        "id": "-UOlROp33rJo"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "9dquwCQB3rJp"
-      },
-      "outputs": [],
       "source": [
         "# Use entire batch since this is such a small dataset.\n",
         "NUM_EXAMPLES = len(y_train)\n",
@@ -464,13 +455,14 @@
         "# Training and evaluation input functions.\n",
         "train_input_fn = make_input_fn(dftrain, y_train)\n",
         "eval_input_fn = make_input_fn(dfeval, y_eval, shuffle=False, n_epochs=1)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "9dquwCQB3rJp"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "HttfNNlN3rJr"
-      },
       "source": [
         "## Train and evaluate the model\n",
         "\n",
@@ -481,15 +473,14 @@
         "3. You will assess model performance using the evaluation set—in this example, the `dfeval` DataFrame. You will verify that the predictions match the labels from the `y_eval` array.\n",
         "\n",
         "Before training a Boosted Trees model, let's first train a linear classifier (logistic regression model). It is best practice to start with simpler model to establish a benchmark."
-      ]
+      ],
+      "metadata": {
+        "id": "HttfNNlN3rJr"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "JPOGpmmq3rJr"
-      },
-      "outputs": [],
       "source": [
         "linear_est = tf.estimator.LinearClassifier(feature_columns)\n",
         "\n",
@@ -500,24 +491,24 @@
         "results = linear_est.evaluate(eval_input_fn)\n",
         "print('Accuracy : ', results['accuracy'])\n",
         "print('Dummy model: ', results['accuracy_baseline'])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "JPOGpmmq3rJr"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BarkNXwA3rJu"
-      },
       "source": [
         "Next let's train a Boosted Trees model. For boosted trees, regression (`BoostedTreesRegressor`) and classification (`BoostedTreesClassifier`) are supported, along with using any twice differentiable custom loss (`BoostedTreesEstimator`). Since the goal is to predict a class - survive or not survive, you will use the `BoostedTreesClassifier`.\n"
-      ]
+      ],
+      "metadata": {
+        "id": "BarkNXwA3rJu"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "tgEzMtlw3rJu"
-      },
-      "outputs": [],
       "source": [
         "# Since data fits into memory, use entire dataset per layer. It will be faster.\n",
         "# Above one batch is defined as the entire dataset.\n",
@@ -533,48 +524,48 @@
         "results = est.evaluate(eval_input_fn)\n",
         "print('Accuracy : ', results['accuracy'])\n",
         "print('Dummy model: ', results['accuracy_baseline'])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "tgEzMtlw3rJu"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "hEflwznXvuMP"
-      },
       "source": [
         "Now you can use the train model to make predictions on a passenger from the evaluation set. TensorFlow models are optimized to make predictions on a batch, or collection, of examples at once. Earlier,  the `eval_input_fn` is  defined using the entire evaluation set."
-      ]
+      ],
+      "metadata": {
+        "id": "hEflwznXvuMP"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "6zmIjTr73rJ4"
-      },
-      "outputs": [],
       "source": [
         "pred_dicts = list(est.predict(eval_input_fn))\n",
         "probs = pd.Series([pred['probabilities'][1] for pred in pred_dicts])\n",
         "\n",
         "probs.plot(kind='hist', bins=20, title='predicted probabilities')\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "6zmIjTr73rJ4"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "mBUaNN1BzJHG"
-      },
       "source": [
         "Finally you can also look at the receiver operating characteristic (ROC) of the results, which will give us a better idea of the tradeoff between the true positive rate and false positive rate."
-      ]
+      ],
+      "metadata": {
+        "id": "mBUaNN1BzJHG"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "NzxghvVz3rJ6"
-      },
-      "outputs": [],
       "source": [
         "from sklearn.metrics import roc_curve\n",
         "\n",
@@ -586,7 +577,11 @@
         "plt.xlim(0,)\n",
         "plt.ylim(0,)\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "NzxghvVz3rJ6"
+      }
     }
   ],
   "metadata": {
@@ -601,5 +596,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
