--- a/non-ml/pdes.ipynb
+++ b/non-ml/pdes.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "_omgylxzm5i9"
-      },
       "source": [
         "##### Copyright 2019 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "_omgylxzm5i9"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "f0A2utIXbPc5"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,67 +24,63 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "f0A2utIXbPc5"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eriCSHTznS4U"
-      },
       "source": [
         "# Partial Differential Equations"
-      ]
+      ],
+      "metadata": {
+        "id": "eriCSHTznS4U"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "uYCNQT4snWr6"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/non-ml/pdes.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/non-ml/pdes.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "uYCNQT4snWr6"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "uYCNQT4snWr6"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well."
+      ],
+      "metadata": {
+        "id": "uYCNQT4snWr6"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "zxQvbi5gnyMm"
-      },
       "source": [
         "TensorFlow isn't just for machine learning. Here you will use TensorFlow to simulate the behavior of a [partial differential equation](https://en.wikipedia.org/wiki/Partial_differential_equation). You'll simulate the surface of a square pond as a few raindrops land on it.\n",
         "\n",
         "## Basic setup\n",
         "\n",
         "A few imports you'll need."
-      ]
+      ],
+      "metadata": {
+        "id": "zxQvbi5gnyMm"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "FG6DLet6ol3j"
-      },
-      "outputs": [],
       "source": [
         "#Import libraries for simulation\n",
         "import tensorflow.compat.v1 as tf\n",
@@ -100,24 +91,24 @@
         "import PIL.Image\n",
         "from io import BytesIO\n",
         "from IPython.display import clear_output, Image, display\n"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "FG6DLet6ol3j"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7vd7rHS0oqEF"
-      },
       "source": [
         "A function for displaying the state of the pond's surface as an image."
-      ]
+      ],
+      "metadata": {
+        "id": "7vd7rHS0oqEF"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "fJ8SpYYUoq6G"
-      },
-      "outputs": [],
       "source": [
         "def DisplayArray(a, fmt='jpeg', rng=[0,1]):\n",
         "  \"\"\"Display an array as a picture.\"\"\"\n",
@@ -127,44 +118,44 @@
         "  PIL.Image.fromarray(a).save(f, fmt)\n",
         "  clear_output(wait = True)\n",
         "  display(Image(data=f.getvalue()))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "fJ8SpYYUoq6G"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "NjiZ2_6Mou13"
-      },
       "source": [
         "Here you start an interactive TensorFlow session for convenience in playing around. A regular session would work as well if you were doing this in an executable .py file."
-      ]
+      ],
+      "metadata": {
+        "id": "NjiZ2_6Mou13"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "cH82JlsPozdV"
-      },
-      "outputs": [],
       "source": [
         "sess = tf.InteractiveSession()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "cH82JlsPozdV"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Hbk97yero5a9"
-      },
       "source": [
         "## Computational convenience functions"
-      ]
+      ],
+      "metadata": {
+        "id": "Hbk97yero5a9"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "XVomNV1OpBbX"
-      },
-      "outputs": [],
       "source": [
         "def make_kernel(a):\n",
         "  \"\"\"Transform a 2D array into a convolution kernel\"\"\"\n",
@@ -184,46 +175,46 @@
         "                           [1.0, -6., 1.0],\n",
         "                           [0.5, 1.0, 0.5]])\n",
         "  return simple_conv(x, laplace_k)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "XVomNV1OpBbX"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "f9gBib2lpINO"
-      },
       "source": [
         "## Define the PDE\n",
         "\n",
         "Our pond is a perfect 500 x 500 square, as is the case for most ponds found in nature."
-      ]
+      ],
+      "metadata": {
+        "id": "f9gBib2lpINO"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "7faiwBQhpK1Z"
-      },
-      "outputs": [],
       "source": [
         "N = 500"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "7faiwBQhpK1Z"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "U_DscmhfpPs0"
-      },
       "source": [
         "Here you create a pond and hit it with some rain drops."
-      ]
+      ],
+      "metadata": {
+        "id": "U_DscmhfpPs0"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Mtk8t0IOpSrb"
-      },
-      "outputs": [],
       "source": [
         "# Initial Conditions -- some rain drops hit a pond\n",
         "\n",
@@ -237,24 +228,24 @@
         "  u_init[a,b] = np.random.uniform()\n",
         "\n",
         "DisplayArray(u_init, rng=[-0.1, 0.1])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "Mtk8t0IOpSrb"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5vzdx9rHpXsl"
-      },
       "source": [
         "Now you specify the details of the differential equation."
-      ]
+      ],
+      "metadata": {
+        "id": "5vzdx9rHpXsl"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "c6uj8LFDpaZO"
-      },
-      "outputs": [],
       "source": [
         "# Parameters:\n",
         "# eps -- time resolution\n",
@@ -274,26 +265,26 @@
         "step = tf.group(\n",
         "  U.assign(U_),\n",
         "  Ut.assign(Ut_))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "c6uj8LFDpaZO"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eAjwNRjTppN-"
-      },
       "source": [
         "## Run the simulation\n",
         "\n",
         "This is where it gets fun -- running time forward with a simple for loop."
-      ]
+      ],
+      "metadata": {
+        "id": "eAjwNRjTppN-"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "jJLvEydzprsy"
-      },
-      "outputs": [],
       "source": [
         "# Initialize state to initial conditions\n",
         "tf.global_variables_initializer().run()\n",
@@ -305,16 +296,20 @@
         "\n",
         "# Show final image\n",
         "DisplayArray(U.eval(), rng=[-0.1, 0.1])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "jJLvEydzprsy"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "8AcEDQfbpyDT"
-      },
       "source": [
         "Look! Ripples!"
-      ]
+      ],
+      "metadata": {
+        "id": "8AcEDQfbpyDT"
+      }
     }
   ],
   "metadata": {
@@ -328,5 +323,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
