--- a/distribute/training_loops.ipynb
+++ b/distribute/training_loops.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "MhoQ0WE77laV"
-      },
       "source": [
         "##### Copyright 2019 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "MhoQ0WE77laV"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "_ckMIh7O7s6D"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,65 +24,61 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "_ckMIh7O7s6D"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "jYysdyb-CaWM"
-      },
       "source": [
         "# tf.distribute.Strategy with Training Loops"
-      ]
+      ],
+      "metadata": {
+        "id": "jYysdyb-CaWM"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "S5Uhzt6vVIB2"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/distribute/training_loops.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/distribute/training_loops.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "S5Uhzt6vVIB2"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "S5Uhzt6vVIB2"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well."
+      ],
+      "metadata": {
+        "id": "S5Uhzt6vVIB2"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "FbVhjPpzn6BM"
-      },
       "source": [
         "This tutorial demonstrates how to use [`tf.distribute.Strategy`](https://www.tensorflow.org/r1/guide/distribute_strategy) with custom training loops. We will train a simple CNN model on the fashion MNIST dataset. The fashion MNIST dataset contains 60000 train images of size 28 x 28 and 10000 test images of size 28 x 28.\n",
         "\n",
         "We are using custom training loops to train our model because they give us flexibility and a greater control on training. Moreover, it is easier to debug the model and the training loop."
-      ]
+      ],
+      "metadata": {
+        "id": "FbVhjPpzn6BM"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "dzLKpmZICaWN"
-      },
-      "outputs": [],
       "source": [
         "# Import TensorFlow\n",
         "import tensorflow.compat.v1 as tf\n",
@@ -98,24 +89,24 @@
         "import os\n",
         "\n",
         "print(tf.__version__)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "dzLKpmZICaWN"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "MM6W__qraV55"
-      },
       "source": [
         "## Download the fashion mnist dataset"
-      ]
+      ],
+      "metadata": {
+        "id": "MM6W__qraV55"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "7MqDQO0KCaWS"
-      },
-      "outputs": [],
       "source": [
         "fashion_mnist = tf.keras.datasets.fashion_mnist\n",
         "\n",
@@ -134,22 +125,23 @@
         "\n",
         "train_labels = train_labels.astype('int64')\n",
         "test_labels = test_labels.astype('int64')"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "7MqDQO0KCaWS"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "4AXoHhrsbdF3"
-      },
       "source": [
         "## Create a strategy to distribute the variables and the graph"
-      ]
+      ],
+      "metadata": {
+        "id": "4AXoHhrsbdF3"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5mVuLZhbem8d"
-      },
       "source": [
         "How does `tf.distribute.MirroredStrategy` strategy work?\n",
         "\n",
@@ -160,57 +152,56 @@
         "*   After the sync, the same update is made to the copies of the variables on each replica.\n",
         "\n",
         "Note: You can put all the code below inside a single scope. We are dividing it into several code cells for illustration purposes.\n"
-      ]
+      ],
+      "metadata": {
+        "id": "5mVuLZhbem8d"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "F2VeZUWUj5S4"
-      },
-      "outputs": [],
       "source": [
         "# If the list of devices is not specified in the\n",
         "# `tf.distribute.MirroredStrategy` constructor, it will be auto-detected.\n",
         "strategy = tf.distribute.MirroredStrategy()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "F2VeZUWUj5S4"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "ZngeM_2o0_JO"
-      },
-      "outputs": [],
       "source": [
         "print ('Number of devices: {}'.format(strategy.num_replicas_in_sync))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "ZngeM_2o0_JO"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "k53F5I_IiGyI"
-      },
       "source": [
         "## Setup input pipeline"
-      ]
+      ],
+      "metadata": {
+        "id": "k53F5I_IiGyI"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "0Qb6nDgxiN_n"
-      },
       "source": [
         "When training a model with multiple GPUs, you can use the extra computing power effectively by increasing the batch size. In general, use the largest batch size that fits the GPU memory, and tune the learning rate accordingly."
-      ]
+      ],
+      "metadata": {
+        "id": "0Qb6nDgxiN_n"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "jwJtsCQhHK-E"
-      },
-      "outputs": [],
       "source": [
         "BUFFER_SIZE = len(train_images)\n",
         "\n",
@@ -218,24 +209,24 @@
         "BATCH_SIZE = BATCH_SIZE_PER_REPLICA * strategy.num_replicas_in_sync\n",
         "\n",
         "EPOCHS = 10"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "jwJtsCQhHK-E"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "J7fj3GskHC8g"
-      },
       "source": [
         "`tf.distribute.Strategy.experimental_distribute_dataset` evenly distributes the dataset across all the replicas."
-      ]
+      ],
+      "metadata": {
+        "id": "J7fj3GskHC8g"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "WYrMNNDhAvVl"
-      },
-      "outputs": [],
       "source": [
         "train_dataset = tf.data.Dataset.from_tensor_slices(\n",
         "(train_images, train_labels)).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)\n",
@@ -244,26 +235,26 @@
         "test_dataset = tf.data.Dataset.from_tensor_slices(\n",
         "    (test_images, test_labels)).batch(BATCH_SIZE)\n",
         "test_ds = strategy.experimental_distribute_dataset(test_dataset)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "WYrMNNDhAvVl"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "bAXAo_wWbWSb"
-      },
       "source": [
         "## Model Creation\n",
         "\n",
         "Create a model using `tf.keras.Sequential`. You can also use the Model Subclassing API to do this."
-      ]
+      ],
+      "metadata": {
+        "id": "bAXAo_wWbWSb"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "9ODch-OFCaW4"
-      },
-      "outputs": [],
       "source": [
         "with strategy.scope():\n",
         "  model = tf.keras.Sequential([\n",
@@ -277,13 +268,14 @@
         "      tf.keras.layers.Dense(10, activation='softmax')\n",
         "    ])\n",
         "  optimizer = tf.train.GradientDescentOptimizer(0.001)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "9ODch-OFCaW4"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "e-wlFFZbP33n"
-      },
       "source": [
         "## Define the loss function\n",
         "\n",
@@ -313,24 +305,23 @@
         "* This reduction and scaling is done automatically in keras `model.compile` and `model.fit`\n",
         "\n",
         "* If using `tf.keras.losses` classes, the loss reduction needs to be explicitly specified to be one of `NONE` or `SUM`. `AUTO` and `SUM_OVER_BATCH_SIZE`  are disallowed when used with `tf.distribute.Strategy`. `AUTO` is disallowed because the user should explicitly think about what reduction they want to make sure it is correct in the distributed case. `SUM_OVER_BATCH_SIZE` is disallowed because currently it would only divide by per replica batch size, and leave the dividing by number of replicas to the user, which might be easy to miss. So instead we ask the user do the reduction themselves explicitly."
-      ]
+      ],
+      "metadata": {
+        "id": "e-wlFFZbP33n"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "iuKuNXPORfqJ"
-      },
       "source": [
         "## Training loop"
-      ]
+      ],
+      "metadata": {
+        "id": "iuKuNXPORfqJ"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "47BLVkRkVQDO"
-      },
-      "outputs": [],
       "source": [
         "with strategy.scope():\n",
         "  def train_step(dist_inputs):\n",
@@ -349,15 +340,15 @@
         "    mean_loss = strategy.reduce(\n",
         "        tf.distribute.ReduceOp.SUM, per_replica_losses, axis=None)\n",
         "    return mean_loss"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "47BLVkRkVQDO"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "7x7s5iYAYSGD"
-      },
-      "outputs": [],
       "source": [
         "with strategy.scope():\n",
         "  train_iterator = train_ds.make_initializable_iterator()\n",
@@ -373,18 +364,22 @@
         "            print('Epoch {} Step {} Loss {:.4f}'.format(epoch+1,\n",
         "                                                        step,\n",
         "                                                        sess.run(loss)))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "7x7s5iYAYSGD"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "6hEJNsokjOKs"
-      },
       "source": [
         "## Next Steps\n",
         "\n",
         "Try out the new `tf.distribute.Strategy` API on your models."
-      ]
+      ],
+      "metadata": {
+        "id": "6hEJNsokjOKs"
+      }
     }
   ],
   "metadata": {
@@ -399,5 +394,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
