--- a/eager/custom_layers.ipynb
+++ b/eager/custom_layers.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "tDnwEv8FtJm7"
-      },
       "source": [
         "##### Copyright 2018 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "tDnwEv8FtJm7"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "JlknJBWQtKkI"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,72 +24,69 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "JlknJBWQtKkI"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "60RdWsg1tETW"
-      },
       "source": [
         "# Custom layers"
-      ]
+      ],
+      "metadata": {
+        "id": "60RdWsg1tETW"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BcJg7Enms86w"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/eager/custom_layers.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/eager/custom_layers.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "BcJg7Enms86w"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BcJg7Enms86w"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well. "
+      ],
+      "metadata": {
+        "id": "BcJg7Enms86w"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "UEu3q4jmpKVT"
-      },
       "source": [
         "We recommend using `tf.keras` as a high-level API for building neural networks. That said, most TensorFlow APIs are usable with eager execution.\n"
-      ]
+      ],
+      "metadata": {
+        "id": "UEu3q4jmpKVT"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "pwX7Fii1rwsJ"
-      },
-      "outputs": [],
       "source": [
         "import tensorflow.compat.v1 as tf"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "pwX7Fii1rwsJ"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "zSFfVVjkrrsI"
-      },
       "source": [
         "## Layers: common sets of useful operations\n",
         "\n",
@@ -103,15 +95,14 @@
         "Many machine learning models are expressible as the composition and stacking of relatively simple layers, and TensorFlow provides both a set of many common layers as a well as easy ways for you to write your own application-specific layers either from scratch or as the composition of existing layers.\n",
         "\n",
         "TensorFlow includes the full [Keras](https://keras.io) API in the tf.keras package, and the Keras layers are very useful when building your own models.\n"
-      ]
+      ],
+      "metadata": {
+        "id": "zSFfVVjkrrsI"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "8PyXlPl-4TzQ"
-      },
-      "outputs": [],
       "source": [
         "# In the tf.keras.layers package, layers are objects. To construct a layer,\n",
         "# simply construct the object. Most layers take as a first argument the number\n",
@@ -121,62 +112,63 @@
         "# the first time the layer is used, but it can be provided if you want to\n",
         "# specify it manually, which is useful in some complex models.\n",
         "layer = tf.keras.layers.Dense(10, input_shape=(None, 5))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "8PyXlPl-4TzQ"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Fn69xxPO5Psr"
-      },
       "source": [
         "The full list of pre-existing layers can be seen in [the documentation](https://www.tensorflow.org/api_docs/python/tf/keras/layers). It includes Dense (a fully-connected layer),\n",
         "Conv2D, LSTM, BatchNormalization, Dropout, and many others."
-      ]
+      ],
+      "metadata": {
+        "id": "Fn69xxPO5Psr"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "E3XKNknP5Mhb"
-      },
-      "outputs": [],
       "source": [
         "# To use a layer, simply call it.\n",
         "layer(tf.zeros([10, 5]))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "E3XKNknP5Mhb"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Wt_Nsv-L5t2s"
-      },
-      "outputs": [],
       "source": [
         "# Layers have many useful methods. For example, you can inspect all variables\n",
         "# in a layer using `layer.variables` and trainable variables using\n",
         "# `layer.trainable_variables`. In this case a fully-connected layer\n",
         "# will have variables for weights and biases.\n",
         "layer.variables"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "Wt_Nsv-L5t2s"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "6ilvKjz8_4MQ"
-      },
-      "outputs": [],
       "source": [
         "# The variables are also accessible through nice accessors\n",
         "layer.kernel, layer.bias"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "6ilvKjz8_4MQ"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "O0kDbE54-5VS"
-      },
       "source": [
         "## Implementing custom layers\n",
         "The best way to implement your own layer is extending the tf.keras.Layer class and implementing:\n",
@@ -185,15 +177,14 @@
         "  * `call`, where you do the forward computation\n",
         "\n",
         "Note that you don't have to wait until `build` is called to create your variables, you can also create them in `__init__`. However, the advantage of creating them in `build` is that it enables late variable creation based on the shape of the inputs the layer will operate on. On the other hand, creating variables in `__init__` would mean that shapes required to create the variables will need to be explicitly specified."
-      ]
+      ],
+      "metadata": {
+        "id": "O0kDbE54-5VS"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "5Byl3n1k5kIy"
-      },
-      "outputs": [],
       "source": [
         "class MyDenseLayer(tf.keras.layers.Layer):\n",
         "  def __init__(self, num_outputs):\n",
@@ -211,37 +202,37 @@
         "layer = MyDenseLayer(10)\n",
         "print(layer(tf.zeros([10, 5])))\n",
         "print(layer.trainable_variables)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "5Byl3n1k5kIy"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "tk8E2vY0-z4Z"
-      },
       "source": [
         "Overall code is easier to read and maintain if it uses standard layers whenever possible, as other readers will be familiar with the behavior of standard layers. If you want to use a layer which is not present in tf.keras.layers or tf.contrib.layers, consider filing a [github issue](http://github.com/tensorflow/tensorflow/issues/new) or, even better, sending us a pull request!"
-      ]
+      ],
+      "metadata": {
+        "id": "tk8E2vY0-z4Z"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Qhg4KlbKrs3G"
-      },
       "source": [
         "## Models: composing layers\n",
         "\n",
         "Many interesting layer-like things in machine learning models are implemented by composing existing layers. For example, each residual block in a resnet is a composition of convolutions, batch normalizations, and a shortcut.\n",
         "\n",
         "The main class used when creating a layer-like thing which contains other layers is tf.keras.Model. Implementing one is done by inheriting from tf.keras.Model."
-      ]
+      ],
+      "metadata": {
+        "id": "Qhg4KlbKrs3G"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "N30DTXiRASlb"
-      },
-      "outputs": [],
       "source": [
         "class ResnetIdentityBlock(tf.keras.Model):\n",
         "  def __init__(self, kernel_size, filters):\n",
@@ -276,24 +267,24 @@
         "block = ResnetIdentityBlock(1, [1, 2, 3])\n",
         "print(block(tf.zeros([1, 2, 3, 3])))\n",
         "print([x.name for x in block.trainable_variables])"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "N30DTXiRASlb"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "wYfucVw65PMj"
-      },
       "source": [
         "Much of the time, however, models which compose many layers simply call one layer after the other. This can be done in very little code using tf.keras.Sequential"
-      ]
+      ],
+      "metadata": {
+        "id": "wYfucVw65PMj"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "L9frk7Ur4uvJ"
-      },
-      "outputs": [],
       "source": [
         " my_seq = tf.keras.Sequential([tf.keras.layers.Conv2D(1, (1, 1)),\n",
         "                               tf.keras.layers.BatchNormalization(),\n",
@@ -303,18 +294,22 @@
         "                               tf.keras.layers.Conv2D(3, (1, 1)),\n",
         "                               tf.keras.layers.BatchNormalization()])\n",
         "my_seq(tf.zeros([1, 2, 3, 3]))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "L9frk7Ur4uvJ"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "c5YwYcnuK-wc"
-      },
       "source": [
         "# Next steps\n",
         "\n",
         "Now you can go back to the previous notebook and adapt the linear regression example to use layers and models to be better structured."
-      ]
+      ],
+      "metadata": {
+        "id": "c5YwYcnuK-wc"
+      }
     }
   ],
   "metadata": {
@@ -329,5 +324,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
