--- a/eager/custom_training.ipynb
+++ b/eager/custom_training.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5rmpybwysXGV"
-      },
       "source": [
         "##### Copyright 2018 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "5rmpybwysXGV"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "m8y3rGtQsYP2"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,123 +24,119 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "m8y3rGtQsYP2"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "hrXv0rU9sIma"
-      },
       "source": [
         "# Custom training: basics"
-      ]
+      ],
+      "metadata": {
+        "id": "hrXv0rU9sIma"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7S0BwJ_8sLu7"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/eager/custom_training.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/eager/custom_training.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "7S0BwJ_8sLu7"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7S0BwJ_8sLu7"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well."
+      ],
+      "metadata": {
+        "id": "7S0BwJ_8sLu7"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "k2o3TTG4TFpt"
-      },
       "source": [
         "In the previous tutorial we covered the TensorFlow APIs for automatic differentiation, a basic building block for machine learning.\n",
         "In this tutorial we will use the TensorFlow primitives introduced in the prior tutorials to do some simple machine learning.\n",
         "\n",
         "TensorFlow also includes a higher-level neural networks API (`tf.keras`) which provides useful abstractions to reduce boilerplate. We strongly recommend those higher level APIs for people working with neural networks. However, in this short tutorial we cover neural network training from first principles to establish a strong foundation."
-      ]
+      ],
+      "metadata": {
+        "id": "k2o3TTG4TFpt"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "3LXMVuV0VhDr"
-      },
       "source": [
         "## Setup"
-      ]
+      ],
+      "metadata": {
+        "id": "3LXMVuV0VhDr"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "PJ64L90aVir3"
-      },
-      "outputs": [],
       "source": [
         "import tensorflow.compat.v1 as tf"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "PJ64L90aVir3"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eMAWbDJFVmMk"
-      },
       "source": [
         "## Variables\n",
         "\n",
         "Tensors in TensorFlow are immutable stateless objects. Machine learning models, however, need to have changing state: as your model trains, the same code to compute predictions should behave differently over time (hopefully with a lower loss!). To represent this state which needs to change over the course of your computation, you can choose to rely on the fact that Python is a stateful programming language:\n"
-      ]
+      ],
+      "metadata": {
+        "id": "eMAWbDJFVmMk"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "VkJwtLS_Jbn8"
-      },
-      "outputs": [],
       "source": [
         "# Using python state\n",
         "x = tf.zeros([10, 10])\n",
         "x += 2  # This is equivalent to x = x + 2, which does not mutate the original\n",
         "        # value of x\n",
         "print(x)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "VkJwtLS_Jbn8"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "wfneTXy7JcUz"
-      },
       "source": [
         "TensorFlow, however, has stateful operations built in, and these are often more pleasant to use than low-level Python representations of your state. To represent weights in a model, for example, it's often convenient and efficient to use TensorFlow variables.\n",
         "\n",
         "A Variable is an object which stores a value and, when used in a TensorFlow computation, will implicitly read from this stored value. There are operations (`tf.assign_sub`, `tf.scatter_update`, etc) which manipulate the value stored in a TensorFlow variable."
-      ]
+      ],
+      "metadata": {
+        "id": "wfneTXy7JcUz"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "itxmrMil6DQi"
-      },
-      "outputs": [],
       "source": [
         "v = tf.Variable(1.0)\n",
         "assert v.numpy() == 1.0\n",
@@ -157,24 +148,25 @@
         "# Use `v` in a TensorFlow operation like tf.square() and reassign\n",
         "v.assign(tf.square(v))\n",
         "assert v.numpy() == 9.0"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "itxmrMil6DQi"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-paSaeq1JzwC"
-      },
       "source": [
         "Computations using Variables are automatically traced when computing gradients. For Variables representing embeddings TensorFlow will do sparse updates by default, which are more computation and memory efficient.\n",
         "\n",
         "Using Variables is also a way to quickly let a reader of your code know that this piece of state is mutable."
-      ]
+      ],
+      "metadata": {
+        "id": "-paSaeq1JzwC"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BMiFcDzE7Qu3"
-      },
       "source": [
         "## Example: Fitting a linear model\n",
         "\n",
@@ -186,26 +178,25 @@
         "4. Run through the training data and use an \"optimizer\" to adjust the variables to fit the data.\n",
         "\n",
         "In this tutorial, we'll walk through a trivial example of a simple linear model: `f(x) = x * W + b`, which has two variables - `W` and `b`. Furthermore, we'll synthesize data such that a well trained model would have `W = 3.0` and `b = 2.0`."
-      ]
+      ],
+      "metadata": {
+        "id": "BMiFcDzE7Qu3"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "gFzH64Jn9PIm"
-      },
       "source": [
         "### Define the model\n",
         "\n",
         "Let's define a simple class to encapsulate the variables and the computation."
-      ]
+      ],
+      "metadata": {
+        "id": "gFzH64Jn9PIm"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "_WRu7Pze7wk8"
-      },
-      "outputs": [],
       "source": [
         "class Model(object):\n",
         "  def __init__(self):\n",
@@ -220,49 +211,49 @@
         "model = Model()\n",
         "\n",
         "assert model(3.0).numpy() == 15.0"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "_WRu7Pze7wk8"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "xa6j_yXa-j79"
-      },
       "source": [
         "### Define a loss function\n",
         "\n",
         "A loss function measures how well the output of a model for a given input matches the desired output. Let's use the standard L2 loss."
-      ]
+      ],
+      "metadata": {
+        "id": "xa6j_yXa-j79"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Y0ysUFGY924U"
-      },
-      "outputs": [],
       "source": [
         "def loss(predicted_y, desired_y):\n",
         "  return tf.reduce_mean(tf.square(predicted_y - desired_y))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "Y0ysUFGY924U"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "qutT_fkl_CBc"
-      },
       "source": [
         "### Obtain training data\n",
         "\n",
         "Let's synthesize the training data with some noise."
-      ]
+      ],
+      "metadata": {
+        "id": "qutT_fkl_CBc"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "gxPTb-kt_N5m"
-      },
-      "outputs": [],
       "source": [
         "TRUE_W = 3.0\n",
         "TRUE_b = 2.0\n",
@@ -271,24 +262,24 @@
         "inputs  = tf.random_normal(shape=[NUM_EXAMPLES])\n",
         "noise   = tf.random_normal(shape=[NUM_EXAMPLES])\n",
         "outputs = inputs * TRUE_W + TRUE_b + noise"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "gxPTb-kt_N5m"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-50nq-wPBsAW"
-      },
       "source": [
         "Before we train the model let's visualize where the model stands right now. We'll plot the model's predictions in red and the training data in blue."
-      ]
+      ],
+      "metadata": {
+        "id": "-50nq-wPBsAW"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "_eb83LtrB4nt"
-      },
-      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -298,26 +289,26 @@
         "\n",
         "print('Current loss: '),\n",
         "print(loss(model(inputs), outputs).numpy())"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "_eb83LtrB4nt"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "sSDP-yeq_4jE"
-      },
       "source": [
         "### Define a training loop\n",
         "\n",
         "We now have our network and our training data. Let's train it, i.e., use the training data to update the model's variables (`W` and `b`) so that the loss goes down using [gradient descent](https://en.wikipedia.org/wiki/Gradient_descent). There are many variants of the gradient descent scheme that are captured in `tf.train.Optimizer` implementations. We'd highly recommend using those implementations, but in the spirit of building from first principles, in this particular example we will implement the basic math ourselves."
-      ]
+      ],
+      "metadata": {
+        "id": "sSDP-yeq_4jE"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "MBIACgdnA55X"
-      },
-      "outputs": [],
       "source": [
         "def train(model, inputs, outputs, learning_rate):\n",
         "  with tf.GradientTape() as t:\n",
@@ -325,24 +316,24 @@
         "  dW, db = t.gradient(current_loss, [model.W, model.b])\n",
         "  model.W.assign_sub(learning_rate * dW)\n",
         "  model.b.assign_sub(learning_rate * db)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "MBIACgdnA55X"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "RwWPaJryD2aN"
-      },
       "source": [
         "Finally, let's repeatedly run through the training data and see how `W` and `b` evolve."
-      ]
+      ],
+      "metadata": {
+        "id": "RwWPaJryD2aN"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "XdfkR223D9dW"
-      },
-      "outputs": [],
       "source": [
         "model = Model()\n",
         "\n",
@@ -365,13 +356,14 @@
         "         [TRUE_b] * len(epochs), 'b--')\n",
         "plt.legend(['W', 'b', 'true W', 'true_b'])\n",
         "plt.show()\n"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "XdfkR223D9dW"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vPnIVuaSJwWz"
-      },
       "source": [
         "## Next Steps\n",
         "\n",
@@ -379,7 +371,10 @@
         "\n",
         "In theory, this is pretty much all you need to use TensorFlow for your machine learning research.\n",
         "In practice, particularly for neural networks, the higher level APIs like `tf.keras` will be much more convenient since it provides higher level building blocks (called \"layers\"), utilities to save and restore state, a suite of loss functions, a suite of optimization strategies etc.\n"
-      ]
+      ],
+      "metadata": {
+        "id": "vPnIVuaSJwWz"
+      }
     }
   ],
   "metadata": {
@@ -394,5 +389,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
