--- a/eager/eager_basics.ipynb
+++ b/eager/eager_basics.ipynb
@@ -2,21 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "iPpI7RaYoZuE"
-      },
       "source": [
         "##### Copyright 2018 The TensorFlow Authors."
-      ]
+      ],
+      "metadata": {
+        "id": "iPpI7RaYoZuE"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "hro2InpHobKk"
-      },
-      "outputs": [],
       "source": [
         "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
@@ -29,52 +24,49 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "form",
+        "id": "hro2InpHobKk"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "U9i2Dsh-ziXr"
-      },
       "source": [
         "# Eager execution basics"
-      ]
+      ],
+      "metadata": {
+        "id": "U9i2Dsh-ziXr"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Hndw-YcxoOJK"
-      },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/r1/tutorials/eager/eager_basics.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
         "  <td>\n",
         "    <a target=\"_blank\" href=\"https://github.com/tensorflow/docs/blob/master/site/en/r1/tutorials/eager/eager_basics.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "</table>"
-      ]
+      ],
+      "metadata": {
+        "id": "Hndw-YcxoOJK"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Hndw-YcxoOJK"
-      },
       "source": [
         "> Note: This is an archived TF1 notebook. These are configured\n",
         "to run in TF2's \n",
         "[compatbility mode](https://www.tensorflow.org/guide/migrate)\n",
-        "but will run in TF1 as well. To use TF1 in Colab, use the\n",
-        "[%tensorflow_version 1.x](https://colab.research.google.com/notebooks/tensorflow_version.ipynb)\n",
-        "magic."
-      ]
+        "but will run in TF1 as well. "
+      ],
+      "metadata": {
+        "id": "Hndw-YcxoOJK"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "6sILUVbHoSgH"
-      },
       "source": [
         "This is an introductory tutorial for using TensorFlow. It will cover:\n",
         "\n",
@@ -82,51 +74,49 @@
         "* Creating and using Tensors\n",
         "* Using GPU acceleration\n",
         "* Datasets"
-      ]
+      ],
+      "metadata": {
+        "id": "6sILUVbHoSgH"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "z1JcS5iBXMRO"
-      },
       "source": [
         "## Import TensorFlow\n",
         "\n",
         "To get started, import the `tensorflow` module and enable eager execution.\n",
         "Eager execution enables a more interactive frontend to TensorFlow, the details of which we will discuss much later."
-      ]
+      ],
+      "metadata": {
+        "id": "z1JcS5iBXMRO"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "source": [
+        "import tensorflow.compat.v1 as tf\n"
+      ],
+      "outputs": [],
       "metadata": {
         "cellView": "code",
         "id": "RlIWhyeLoYnG"
-      },
-      "outputs": [],
-      "source": [
-        "import tensorflow.compat.v1 as tf\n"
-      ]
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "H9UySOPLXdaw"
-      },
       "source": [
         "## Tensors\n",
         "\n",
         "A Tensor is a multi-dimensional array. Similar to NumPy `ndarray` objects, `Tensor` objects have a data type and a shape. Additionally, Tensors can reside in accelerator (like GPU) memory. TensorFlow offers a rich library of operations ([tf.add](https://www.tensorflow.org/api_docs/python/tf/add), [tf.matmul](https://www.tensorflow.org/api_docs/python/tf/matmul), [tf.linalg.inv](https://www.tensorflow.org/api_docs/python/tf/linalg/inv) etc.) that consume and produce Tensors. These operations automatically convert native Python types. For example:\n"
-      ]
+      ],
+      "metadata": {
+        "id": "H9UySOPLXdaw"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "code",
-        "id": "ngUe237Wt48W"
-      },
-      "outputs": [],
       "source": [
         "print(tf.add(1, 2))\n",
         "print(tf.add([1, 2], [3, 4]))\n",
@@ -136,47 +126,49 @@
         "\n",
         "# Operator overloading is also supported\n",
         "print(tf.square(2) + tf.square(3))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "code",
+        "id": "ngUe237Wt48W"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "IDY4WsYRhP81"
-      },
       "source": [
         "Each Tensor has a shape and a datatype"
-      ]
+      ],
+      "metadata": {
+        "id": "IDY4WsYRhP81"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "srYWH1MdJNG7"
-      },
-      "outputs": [],
       "source": [
         "x = tf.matmul([[1]], [[2, 3]])\n",
         "print(x.shape)\n",
         "print(x.dtype)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "srYWH1MdJNG7"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eBPw8e8vrsom"
-      },
       "source": [
         "The most obvious differences between NumPy arrays and TensorFlow Tensors are:\n",
         "\n",
         "1. Tensors can be backed by accelerator memory (like GPU, TPU).\n",
         "2. Tensors are immutable."
-      ]
+      ],
+      "metadata": {
+        "id": "eBPw8e8vrsom"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Dwi1tdW3JBw6"
-      },
       "source": [
         "### NumPy Compatibility\n",
         "\n",
@@ -187,15 +179,14 @@
         "\n",
         "Tensors can be explicitly converted to NumPy ndarrays by invoking the `.numpy()` method on them.\n",
         "These conversions are typically cheap as the array and Tensor share the underlying memory representation if possible. However, sharing the underlying representation isn't always possible since the Tensor may be hosted in GPU memory while NumPy arrays are always backed by host memory, and the conversion will thus involve a copy from GPU to host memory."
-      ]
+      ],
+      "metadata": {
+        "id": "Dwi1tdW3JBw6"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "lCUWzso6mbqR"
-      },
-      "outputs": [],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -211,27 +202,26 @@
         "\n",
         "print(\"The .numpy() method explicitly converts a Tensor to a numpy array\")\n",
         "print(tensor.numpy())"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "lCUWzso6mbqR"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "PBNP8yTRfu_X"
-      },
       "source": [
         "## GPU acceleration\n",
         "\n",
         "Many TensorFlow operations can be accelerated by using the GPU for computation. Without any annotations, TensorFlow automatically decides whether to use the GPU or CPU for an operation (and copies the tensor between CPU and GPU memory if necessary). Tensors produced by an operation are typically backed by the memory of the device on which the operation executed. For example:"
-      ]
+      ],
+      "metadata": {
+        "id": "PBNP8yTRfu_X"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "cellView": "code",
-        "id": "3Twf_Rw-gQFM"
-      },
-      "outputs": [],
       "source": [
         "x = tf.random.uniform([3, 3])\n",
         "\n",
@@ -240,37 +230,38 @@
         "\n",
         "print(\"Is the Tensor on GPU #0:  \"),\n",
         "print(x.device.endswith('GPU:0'))"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "cellView": "code",
+        "id": "3Twf_Rw-gQFM"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vpgYzgVXW2Ud"
-      },
       "source": [
         "### Device Names\n",
         "\n",
         "The `Tensor.device` property provides a fully qualified string name of the device hosting the contents of the tensor. This name encodes many details, such as an identifier of the network address of the host on which this program is executing and the device within that host. This is required for distributed execution of a TensorFlow program. The string ends with `GPU:<N>` if the tensor is placed on the `N`-th GPU on the host."
-      ]
+      ],
+      "metadata": {
+        "id": "vpgYzgVXW2Ud"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ZWZQCimzuqyP"
-      },
       "source": [
         "### Explicit Device Placement\n",
         "\n",
         "The term \"placement\" in TensorFlow refers to how individual operations are assigned (placed on) a device for execution. As mentioned above, when there is no explicit guidance provided, TensorFlow automatically decides which device to execute an operation, and copies Tensors to that device if needed. However, TensorFlow operations can be explicitly placed on specific devices using the `tf.device` context manager. For example:"
-      ]
+      ],
+      "metadata": {
+        "id": "ZWZQCimzuqyP"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "RjkNZTuauy-Q"
-      },
-      "outputs": [],
       "source": [
         "import time\n",
         "\n",
@@ -297,13 +288,14 @@
         "    x = tf.random_uniform([1000, 1000])\n",
         "    assert x.device.endswith(\"GPU:0\")\n",
         "    time_matmul(x)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "RjkNZTuauy-Q"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "o1K4dlhhHtQj"
-      },
       "source": [
         "## Datasets\n",
         "\n",
@@ -317,26 +309,25 @@
         "If you're familiar with TensorFlow graphs, the API for constructing the `Dataset` object remains exactly the same when eager execution is enabled, but the process of iterating over elements of the dataset is slightly simpler.\n",
         "You can use Python iteration over the `tf.data.Dataset` object and do not need to explicitly create an `tf.data.Iterator` object.\n",
         "As a result, the discussion on iterators in the [TensorFlow Guide](https://www.tensorflow.org/r1/guide/datasets) is not relevant when eager execution is enabled."
-      ]
+      ],
+      "metadata": {
+        "id": "o1K4dlhhHtQj"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "zI0fmOynH-Ne"
-      },
       "source": [
         "### Create a source `Dataset`\n",
         "\n",
         "Create a _source_ dataset using one of the factory functions like [`Dataset.from_tensors`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#from_tensors), [`Dataset.from_tensor_slices`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#from_tensor_slices) or using objects that read from files like [`TextLineDataset`](https://www.tensorflow.org/api_docs/python/tf/data/TextLineDataset) or [`TFRecordDataset`](https://www.tensorflow.org/api_docs/python/tf/data/TFRecordDataset). See the [TensorFlow Guide](https://www.tensorflow.org/r1/guide/datasets#reading_input_data) for more information."
-      ]
+      ],
+      "metadata": {
+        "id": "zI0fmOynH-Ne"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "F04fVOHQIBiG"
-      },
-      "outputs": [],
       "source": [
         "ds_tensors = tf.data.Dataset.from_tensor_slices([1, 2, 3, 4, 5, 6])\n",
         "\n",
@@ -351,51 +342,51 @@
         "  \"\"\")\n",
         "\n",
         "ds_file = tf.data.TextLineDataset(filename)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "F04fVOHQIBiG"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vbxIhC-5IPdf"
-      },
       "source": [
         "### Apply transformations\n",
         "\n",
         "Use the transformations functions like [`map`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#map), [`batch`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#batch), [`shuffle`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#shuffle) etc. to apply transformations to the records of the dataset. See the [API documentation for `tf.data.Dataset`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset) for details."
-      ]
+      ],
+      "metadata": {
+        "id": "vbxIhC-5IPdf"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "uXSDZWE-ISsd"
-      },
-      "outputs": [],
       "source": [
         "ds_tensors = ds_tensors.map(tf.square).shuffle(2).batch(2)\n",
         "\n",
         "ds_file = ds_file.batch(2)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "uXSDZWE-ISsd"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "A8X1GNfoIZKJ"
-      },
       "source": [
         "### Iterate\n",
         "\n",
         "When eager execution is enabled `Dataset` objects support iteration.\n",
         "If you're familiar with the use of `Dataset`s in TensorFlow graphs, note that there is no need for calls to `Dataset.make_one_shot_iterator()` or `get_next()` calls."
-      ]
+      ],
+      "metadata": {
+        "id": "A8X1GNfoIZKJ"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "ws-WKRk5Ic6-"
-      },
-      "outputs": [],
       "source": [
         "print('Elements of ds_tensors:')\n",
         "for x in ds_tensors:\n",
@@ -404,7 +395,11 @@
         "print('\\nElements in ds_file:')\n",
         "for x in ds_file:\n",
         "  print(x)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "ws-WKRk5Ic6-"
+      }
     }
   ],
   "metadata": {
@@ -419,5 +414,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
